[gd_scene load_steps=3 format=3 uid="uid://bx7h3m2k8n4yp"]

[ext_resource type="Script" path="res://scripts/ui/wardrobe_screen.gd" id="1_wardrobe_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6

[node name="WardrobeScreen" type="CanvasLayer"]
process_mode = 3
layer = 100
visible = false
script = ExtResource("1_wardrobe_script")

[node name="DarkOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1200, 800)
layout_mode = 2

[node name="StyleBoxFlat" type="StyleBoxFlat" parent="CenterContainer/MainPanel"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "옷장 (Wardrobe)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentHBox" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="LeftVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="CurrentEquipmentLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "현재 착용 아이템"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2

[node name="CurrentJacketLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "재킷: 파란 재킷"

[node name="CurrentSkisLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "스키: 빨간 스키"

[node name="CurrentPolesLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "폴: 회색 폴"

[node name="CurrentHelmetLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "헬멧: 흰색 헬멧"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2

[node name="TestModeCheckBox" type="CheckBox" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "테스트 모드"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox"]
layout_mode = 2

[node name="RightVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="SelectItemLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "아이템 선택"
horizontal_alignment = 1

[node name="CategoryButtons" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="JacketButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
button_pressed = true
text = "재킷"

[node name="SkisButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "스키"

[node name="PolesButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "폴"

[node name="HelmetButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "헬멧"

[node name="ItemGrid" type="GridContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="PaginationContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevPageButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/PaginationContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "◀ 이전"

[node name="PageIndicator" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/PaginationContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "1 / 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextPageButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/PaginationContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "다음 ▶"

[node name="ItemNameLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "선택된 아이템: 없음"
horizontal_alignment = 1

[node name="ButtonsHBox" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CloseButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonsHBox"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "닫기 (ESC)"

[node name="ApplyButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonsHBox"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "적용"

[connection signal="toggled" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/LeftVBox/TestModeCheckBox" to="." method="_on_test_mode_check_box_toggled"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons/JacketButton" to="." method="_on_jacket_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons/SkisButton" to="." method="_on_skis_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons/PolesButton" to="." method="_on_poles_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/CategoryButtons/HelmetButton" to="." method="_on_helmet_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/PaginationContainer/PrevPageButton" to="." method="_on_prev_page_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ContentHBox/RightVBox/PaginationContainer/NextPageButton" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonsHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonsHBox/ApplyButton" to="." method="_on_apply_button_pressed"]
